Comment out clipPath, temp fix

--- a/src/routes/home/index.scss
+++ b/src/routes/home/index.scss
@@ -56,7 +56,7 @@
   position: absolute;
   left: 38%;
   right: 38%;
-  bottom: calc(40% - 16px);
+  bottom: calc(50%); //calc(40% - 16px);
   height: 4px;
   background-color: #99daff;
   border-radius: $spacing-4;
